fixing nav on tablets

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -28,12 +28,12 @@ nav
     @media screen and (min-width: 480px)
       min-height 50px !important
   &.mobile
-    @media screen and (min-width: 480px)
+    @media screen and (min-width: 900px)
       display none
     @media screen and (max-height 480px) and (orientation: landscape)
       display block    
   &.desktop
-    @media screen and (max-width: 480px)
+    @media screen and (max-width: 900px)
       display none
     @media screen and (max-height 480px) and (orientation: landscape)
       display none
@@ -417,6 +417,8 @@ img
     float right
     padding 5px 0 0 0
     cursor pointer
+    @media screen and (min-width 480px) and (max-width 900px)
+      margin 0 20px 0 0 
   &.content
     margin-bottom 30px
     padding 10px
